# Vegard

./: .gitignore  Dockerfile  README.md  SYNDAR_MVP.md  _MVP.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
configs/: default.yaml  mosquitto.conf  prometheus.yml  test_field.geojson
hardware/: fpga_interface.md
sandbox/: mock_aip_server.py  mock_spectral.py  simulate_fleet.py  test_aip_bridge.py
syndar/: __init__.py  auth.py  config.py  exceptions.py  logging_config.py
syndar/command/: __init__.py  aip_bridge.py  api.py  mission.py
syndar/fabric/: __init__.py  attestation.py  database.py  drift_monitor.py  grpc_services.py  mesh.py  task_allocator.py  transport.py
syndar/mvp/: __init__.py  aip_bridge.py  anduril_adapter.py  node_agent.py  simulate.py  task_allocator.py
syndar/node/: __init__.py  node_agent.py
syndar/node/integrations/: hsi_client.py
syndar/proto/: common.proto  common_pb2.py  drift.proto  drift_pb2.py  entity.proto  entity_pb2.py  soil.proto  soil_pb2.py  task.proto  task_pb2.py  transport.proto  transport_pb2.py  transport_pb2_grpc.py
syndar/web/: dashboard.html
tests/: __init__.py  test_aip_bridge.py  test_drift_monitor.py  test_mesh.py
tests/integration/: __init__.py  test_api_integration.py  test_mesh_integration.py  test_task_allocator_integration.py
tests/unit/: __init__.py  test_auth.py  test_config.py  test_database.py  test_drift_monitor.py  test_mesh.py  test_task_allocator.py
vegard/: __init__.py  auth.py  config.py  exceptions.py  logging_config.py
vegard/command/: __init__.py  aip_bridge.py  api.py  fop.py  mission.py
vegard/fabric/: attestation.py  database.py  drift_monitor.py  grpc_services.py  mesh.py  task_allocator.py  transport.py
vegard/mvp/: __init__.py  aip_bridge.py  anduril_adapter.py  drift_monitor.py  mesh.py  node_agent.py  simulate.py  task_allocator.py
vegard/node/: __init__.py  node_agent.py  spectral_bridge.py
vegard/node/integrations/: arthedain_client.py
vegard/proto/: common.proto  common_pb2.py  common_pb2_grpc.py  drift.proto  drift_pb2.py  drift_pb2_grpc.py  entity.proto  entity_pb2.py  entity_pb2_grpc.py  soil.proto  soil_pb2.py  soil_pb2_grpc.py  task.proto  task_pb2.py  task_pb2_grpc.py  transport.proto  transport_pb2.py  transport_pb2_grpc.py
vegard/syndar/fabric/: __init__.py
vegard/web/: dashboard.html
